created the hero section of the shop page

--- a/shop.html
+++ b/shop.html
@@ -72,6 +72,205 @@
                 <li><a href="#">Meat Lover's Pizza</a></li>
             </ul>
         </div>
+
+        <div class="container">
+            <div class="shop__container">
+                <div>
+                    <img src="images/barbecue-chicken-pizza.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                      <h4>BBQ Chicken Pizza</h4>
+                      <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/pizza-2.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/tandoori-chicken.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="450"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+            </div>
+
+            <div class="shop__container">
+                <div>
+                    <img src="images/barbecue-chicken-pizza.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                      <h4>BBQ Chicken Pizza</h4>
+                      <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/pizza-2.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/tandoori-chicken.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="450"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+            </div>
+
+            <div class="shop__container">
+                <div>
+                    <img src="images/barbecue-chicken-pizza.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                      <h4>BBQ Chicken Pizza</h4>
+                      <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/pizza-2.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/tandoori-chicken.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="450"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+            </div>
+
+            <div class="shop__container">
+                <div>
+                    <img src="images/barbecue-chicken-pizza.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                      <h4>BBQ Chicken Pizza</h4>
+                      <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/pizza-2.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/tandoori-chicken.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="450"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+            </div>
+
+            <div class="shop__container">
+                <div>
+                    <img src="images/barbecue-chicken-pizza.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                      <h4>BBQ Chicken Pizza</h4>
+                      <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/pizza-2.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/tandoori-chicken.png" alt="Chicken Kebab Pizza" width="350"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+                <div>
+                    <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="450"/>
+                    <div class="shop__container__variety">
+                        <h4>BBQ Chicken Pizza</h4>
+                        <h4>Ksh.1500</h4>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+
+            </div>
+
+
+        </div>
     </section>
     </main>
 
