--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="./shop.html">Shop</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
@@ -76,8 +76,8 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <form action="">
                   <input type="text" placeholder="Find Pizza Type" />
-                  <button>Search</button>
                 </form>
+                <button>Search</button>
               </div>
 
               <div class="hero__left__stats">
@@ -169,7 +169,7 @@
         </div>
 
         <div class="container">
-          <div class="menu__container">
+          <div class="menu__container chicken">
             <div>
               <img
                 src="images/barbecue-chicken-pizza.png"
@@ -210,7 +210,183 @@
               <button>Add to Cart</button>
             </div>
           </div>
+
+
+
+        <div class="menu__container pepperoni">
+          <div>
+            <img
+              src="images/barbecue-chicken-pizza.png"
+              alt="barbeque chicken pizza"
+              width="300"
+            />
+            <div class="menu__container__variety">
+              <h4>BBQ Pepperoni Pizza</h4>
+              <p>(Cheese with shrimp)</p>
+              <h4>Ksh.1500</h4>
+            </div>
+            <button>Add to Cart</button>
+          </div>
+          <div>
+            <img
+              src="images/tandoori-chicken.png"
+              alt="tandoori chicken pizza"
+              width="300"
+            />
+            <div class="menu__container__variety">
+              <h4>Tandoori Pepperoni Pizza</h4>
+              <p>(Cheese with shrimp)</p>
+              <h4>Ksh.1500</h4>
+            </div>
+            <button>Add to Cart</button>
+          </div>
+          <div>
+            <img
+              src="images/chicken-kebab.png"
+              alt="Chicken Kebab Pizza"
+              width="387"
+            />
+            <div class="menu__container__variety">
+              <h4>Pepperoni Kebab Pizza</h4>
+              <p>(Cheese with shrimp)</p>
+              <h4>Ksh.1500</h4>
+            </div>
+            <button>Add to Cart</button>
+          </div>
         </div>
+
+
+
+      <div class="menu__container margherita">
+        <div>
+          <img
+            src="images/barbecue-chicken-pizza.png"
+            alt="barbeque chicken pizza"
+            width="300"
+          />
+          <div class="menu__container__variety">
+            <h4>BBQ Margherita Pizza</h4>
+            <p>(Cheese with shrimp)</p>
+            <h4>Ksh.1500</h4>
+          </div>
+          <button>Add to Cart</button>
+        </div>
+        <div>
+          <img
+            src="images/tandoori-chicken.png"
+            alt="tandoori chicken pizza"
+            width="300"
+          />
+          <div class="menu__container__variety">
+            <h4>Tandoori Margherita Pizza</h4>
+            <p>(Cheese with shrimp)</p>
+            <h4>Ksh.1500</h4>
+          </div>
+          <button>Add to Cart</button>
+        </div>
+        <div>
+          <img
+            src="images/chicken-kebab.png"
+            alt="Chicken Kebab Pizza"
+            width="387"
+          />
+          <div class="menu__container__variety">
+            <h4>Margherita Kebab Pizza</h4>
+            <p>(Cheese with shrimp)</p>
+            <h4>Ksh.1500</h4>
+          </div>
+          <button>Add to Cart</button>
+        </div>
+      </div>
+
+
+    <div class="menu__container hawaiian">
+      <div>
+        <img
+          src="images/barbecue-chicken-pizza.png"
+          alt="barbeque chicken pizza"
+          width="300"
+        />
+        <div class="menu__container__variety">
+          <h4>BBQ Hawaiian Pizza</h4>
+          <p>(Cheese with shrimp)</p>
+          <h4>Ksh.1500</h4>
+        </div>
+        <button>Add to Cart</button>
+      </div>
+      <div>
+        <img
+          src="images/tandoori-chicken.png"
+          alt="tandoori chicken pizza"
+          width="300"
+        />
+        <div class="menu__container__variety">
+          <h4>Tandoori Hawaiian Pizza</h4>
+          <p>(Cheese with shrimp)</p>
+          <h4>Ksh.1500</h4>
+        </div>
+        <button>Add to Cart</button>
+      </div>
+      <div>
+        <img
+          src="images/chicken-kebab.png"
+          alt="Chicken Kebab Pizza"
+          width="387"
+        />
+        <div class="menu__container__variety">
+          <h4>Hawaiian Kebab Pizza</h4>
+          <p>(Cheese with shrimp)</p>
+          <h4>Ksh.1500</h4>
+        </div>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+
+
+  <div class="menu__container meat-lovers">
+    <div>
+      <img
+        src="images/barbecue-chicken-pizza.png"
+        alt="barbeque chicken pizza"
+        width="300"
+      />
+      <div class="menu__container__variety">
+        <h4>BBQ Meat Lover's Pizza</h4>
+        <p>(Cheese with shrimp)</p>
+        <h4>Ksh.1500</h4>
+      </div>
+      <button>Add to Cart</button>
+    </div>
+    <div>
+      <img
+        src="images/tandoori-chicken.png"
+        alt="tandoori chicken pizza"
+        width="300"
+      />
+      <div class="menu__container__variety">
+        <h4>Tandoori Meat Lover's Pizza</h4>
+        <p>(Cheese with shrimp)</p>
+        <h4>Ksh.1500</h4>
+      </div>
+      <button>Add to Cart</button>
+    </div>
+    <div>
+      <img
+        src="images/chicken-kebab.png"
+        alt="Chicken Kebab Pizza"
+        width="387"
+      />
+      <div class="menu__container__variety">
+        <h4>Meat Lover's Kebab Pizza</h4>
+        <p>(Cheese with shrimp)</p>
+        <h4>Ksh.1500</h4>
+      </div>
+      <button>Add to Cart</button>
+    </div>
+  </div>
+ </div>
+</div>
+
         <button>View More</button>
       </section>
       <!-- /the menu section -->
@@ -297,8 +473,8 @@
           
           <div class="contact__container">
               <div class="contact__container__details">
-                <div class="contact__container__detail__info">
-                  <div class="contact__container__img">
+                <div class="contact__container__details__info">
+                  <div class="contact__container__details__info__img">
                     <img src="images/mail.png" alt="email" width="50">
                   </div>      
                   <div>     
@@ -307,21 +483,21 @@
                   </div>
                 </div>
 
-                <div class="contact__container__detail">
-                  <div class="contact__container__img">
+                <div class="contact__container__details__info">
+                  <div class="contact__container__details__info__img">
                     <img src="images/live-support.png" alt="live support" width="50">
                   </div>      
-                  <div class="contact__container__detail__info">
+                  <div >
                     <h3>Live Support</h3>
                     <p>Get live support now</p>
                   </div>
                 </div>
                 
-                <div class="contact__container__detail">
-                  <div class="contact__container__img">
+                <div class="contact__container__details__info">
+                  <div class="contact__container__details__info__img">
                     <img src="images/phone.png" alt="call now" width="50">
                   </div>      
-                  <div class="contact__container__detail__ifo">
+                  <div>
                     <h3>Phone Number</h3>
                     <p>+2547 11 555 888</p>
                   </div>
@@ -368,5 +544,7 @@
         </div>
       </section>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
