--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
             <div class="nav__container__right">
               <ul>
                 <li>
-                  <a href="#"
-                    ><img
+                  <span class="nav__container__right__counter" id="counter">0</span>
+                  <a href="#">
+                    <img
                       src="images/shopping-cart.png"
                       alt="shopping cart"
                       width="80"
                   /></a>
+                  <span id="cart-preview" class="nav__container__right__bar" class="shop-bar">
+                    <h3>Cart</h3>
+                    <p>The Cart is empty</p>
+                  </span>
                 </li>
                 <li>
                   <a href="#"
@@ -52,6 +57,7 @@
                   /></a>
                 </li>
               </ul>
+
             </div>
           </div>
         </div>
@@ -137,34 +143,11 @@
         <h2><span class="menu--orange">Special Menu</span> For You</h2>
         <div class="menu__list">
           <ul>
-            <li>
-              <a href="#">
-                <h3>Chicken Pizza</h3>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <h3>Pepperoni</h3>
-               <section class="menu">
-
-      </section>
-        </a>
-            </li>
-            <li>
-              <a href="#">
-                <h3>Margherita</h3>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <h3>Hawaiian</h3>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <h3>Meat Lover's Pizza</h3>
-              </a>
-            </li>
+            <li class="select">Chicken Pizza</li>
+            <li class="select">Pepperoni</li>
+            <li class="select">Margherita</li>
+            <li class="select">Hawaiian</li>
+            <li class="select">Meat Lover's Pizza</li>
           </ul>
         </div>
 
@@ -179,9 +162,9 @@
               <div class="menu__container__variety">
                 <h4>BBQ Chicken Pizza</h4>
                 <p>(Cheese with shrimp)</p>
-                <h4>Ksh.1500</h4>
+                <h4 data-price="1500">Ksh.1500</h4>
               </div>
-              <button>Add to Cart</button>
+              <button class="add-to-cart">Add to Cart</button>
             </div>
             <div>
               <img
@@ -192,9 +175,9 @@
               <div class="menu__container__variety">
                 <h4>Tandoori Chicken Pizza</h4>
                 <p>(Cheese with shrimp)</p>
-                <h4>Ksh.1500</h4>
+                <h4 data-price="1500">Ksh.1500</h4>
               </div>
-              <button>Add to Cart</button>
+              <button class="add-to-cart">Add to Cart</button>
             </div>
             <div>
               <img
@@ -205,9 +188,9 @@
               <div class="menu__container__variety">
                 <h4>Chicken Kebab Pizza</h4>
                 <p>(Cheese with shrimp)</p>
-                <h4>Ksh.1500</h4>
+                <h4 data-price="1500">Ksh.1500</h4>
               </div>
-              <button>Add to Cart</button>
+              <button class="add-to-cart">Add to Cart</button>
             </div>
           </div>
 
@@ -545,6 +528,8 @@
       </section>
     </footer>
 
-    <script src="script.js"></script>
+
+   <script src="js/app.js"></script>
+   <script src="js/cart.js"></script>
   </body>
 </html>
